Added h1 tags to each, including nav on every page and start for aside with contact links on index page. Added paragraph tag and placeholder img to index.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 	<title></title>
 </head>
 <body>
-
+	<h2>About Me</h2>
+	<nav class="menu">
+		<a href="#">About</a>
+		<a href="portfolio.html">Portfolio</a>
+		<a href="contact.html">Contact</a>
+	</nav>
+	<aside class="connect-menu">
+		<h3>Connect with Me</h3>
+		<a href="https://github.com/kiglaze" target="_blank">GitHub</a>
+		<a href="https://www.linkedin.com/in/kiglaze/" target="_blank">LinkedIn</a>
+		<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+	</aside>
+	<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
+	<p>Bla bla bla</p>
 </body>
 </html>
