--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,13 @@
 	<title></title>
 </head>
 <body>
-
+	<h2>Contact</h2>
+	<nav class="menu">
+		<a href="index.html">About</a>
+		<a href="portfolio.html">Portfolio</a>
+		<a href="#">Contact</a>
+	</nav>
+	<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
+	<p>Bla bla bla</p>
 </body>
 </html>
