--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,13 @@
 	<title></title>
 </head>
 <body>
-
+	<h2>Portfolio</h2>
+	<nav class="menu">
+		<a href="index.html">About</a>
+		<a href="#">Portfolio</a>
+		<a href="contact.html">Contact</a>
+	</nav>
+	<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
+	<p>Bla bla bla</p>
 </body>
 </html>
