Contact menu aside has image logos for links. Also linked reset.css and style.css. Made image logos all same size.

--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="assets/css/reset.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<h2>About Me</h2>
-	<nav class="menu">
+	<nav class="nav-menu">
 		<a href="#">About</a>
 		<a href="portfolio.html">Portfolio</a>
 		<a href="contact.html">Contact</a>
 	</nav>
 	<aside class="connect-menu">
 		<h3>Connect with Me</h3>
-		<a href="https://github.com/kiglaze" target="_blank">GitHub</a>
-		<a href="https://www.linkedin.com/in/kiglaze/" target="_blank">LinkedIn</a>
-		<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+		<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
+		<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
+		<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
 	</aside>
+	<h2>About Me</h2>
 	<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
 	<p>Bla bla bla</p>
 </body>
