--- a/portfolio.html
+++ b/portfolio.html
@@ -2,15 +2,21 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="assets/css/reset.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<h2>Portfolio</h2>
-	<nav class="menu">
+	<nav class="nav-menu">
 		<a href="index.html">About</a>
 		<a href="#">Portfolio</a>
 		<a href="contact.html">Contact</a>
 	</nav>
-	<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
-	<p>Bla bla bla</p>
+	<aside class="connect-menu">
+		<h3>Connect with Me</h3>
+		<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
+		<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
+		<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+	</aside>
+	<h2>Portfolio</h2>
 </body>
 </html>
