--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,35 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="assets/css/reset.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<h2>Contact</h2>
-	<nav class="menu">
+	<nav class="nav-menu">
 		<a href="index.html">About</a>
 		<a href="portfolio.html">Portfolio</a>
 		<a href="#">Contact</a>
 	</nav>
-	<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
-	<p>Bla bla bla</p>
+	<aside class="connect-menu">
+		<h3>Connect with Me</h3>
+		<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
+		<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
+		<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+	</aside>
+	<h2>Contact</h2>
+	<section class="fieldset">
+		<div class="field">
+			<label for=".name">Name</label>
+			<input class="name" type="text">
+		</div>
+		<div class="field">
+			<label for=".email">Email</label>
+			<input class="email" type="text">
+		</div>
+		<div class="field">
+			<label for=".message">Message</label>
+			<input class="message" type="textarea">
+		</div>
+	</section>
 </body>
 </html>
