Improved styling for pages, making aside be in right column, and nav be to right of h1 header. Used flex box in a few cases.

--- a/contact.html
+++ b/contact.html
@@ -6,31 +6,36 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<nav class="nav-menu">
-		<a href="index.html">About</a>
-		<a href="portfolio.html">Portfolio</a>
-		<a href="#">Contact</a>
-	</nav>
-	<aside class="connect-menu">
-		<h3>Connect with Me</h3>
-		<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
-		<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
-		<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
-	</aside>
-	<h2>Contact</h2>
-	<section class="fieldset">
-		<div class="field">
-			<label for=".name">Name</label>
-			<input class="name" type="text">
-		</div>
-		<div class="field">
-			<label for=".email">Email</label>
-			<input class="email" type="text">
-		</div>
-		<div class="field">
-			<label for=".message">Message</label>
-			<input class="message" type="textarea">
-		</div>
-	</section>
+	<header class="clearfix">
+		<h1 class="name-header">Kristin Glaze</h1> 
+		<nav class="nav-menu">
+			<a href="index.html">About</a>
+			<a href="portfolio.html">Portfolio</a>
+			<a href="#">Contact</a>
+		</nav>
+	</header>
+	<div class="main-content">
+		<section class="fieldset">
+			<h2>Contact</h2>
+			<div class="field">
+				<label for=".name">Name</label>
+				<input class="name" type="text">
+			</div>
+			<div class="field">
+				<label for=".email">Email</label>
+				<input class="email" type="text">
+			</div>
+			<div class="field">
+				<label for=".message">Message</label>
+				<input class="message" type="textarea">
+			</div>
+		</section>
+		<aside class="connect-menu">
+			<h3>Connect with Me</h3>
+			<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
+			<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
+			<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+		</aside>
+	</div>
 </body>
 </html>
