--- a/index.html
+++ b/index.html
@@ -6,19 +6,27 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<nav class="nav-menu">
-		<a href="#">About</a>
-		<a href="portfolio.html">Portfolio</a>
-		<a href="contact.html">Contact</a>
-	</nav>
-	<aside class="connect-menu">
-		<h3>Connect with Me</h3>
-		<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
-		<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
-		<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
-	</aside>
-	<h2>About Me</h2>
-	<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
-	<p>Bla bla bla</p>
+	<header class="clearfix">
+		<h1 class="name-header">Kristin Glaze</h1>
+		<nav class="nav-menu">
+			<a href="#">About</a>
+			<a href="portfolio.html">Portfolio</a>
+			<a href="contact.html">Contact</a>
+		</nav>
+	</header>
+
+	<div class="main-content">
+		<section>
+			<h2>About Me</h2>
+			<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
+			<p>Bla bla bla</p>
+		</section>
+		<aside class="connect-menu">
+			<h3>Connect with Me</h3>
+			<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
+			<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
+			<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+		</aside>
+	</div>
 </body>
 </html>
