Added footer and footer styling.

--- a/contact.html
+++ b/contact.html
@@ -14,28 +14,38 @@
 			<a href="#">Contact</a>
 		</nav>
 	</header>
-	<div class="main-content">
-		<section class="fieldset">
-			<h2>Contact</h2>
-			<div class="field">
-				<label for=".name">Name</label>
-				<input class="name" type="text">
-			</div>
-			<div class="field">
-				<label for=".email">Email</label>
-				<input class="email" type="text">
-			</div>
-			<div class="field">
-				<label for=".message">Message</label>
-				<input class="message" type="textarea">
-			</div>
-		</section>
-		<aside class="connect-menu">
-			<h3>Connect with Me</h3>
-			<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
-			<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
-			<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
-		</aside>
-	</div>
+	<main>
+		<div class="main-content">
+			<section class="fieldset">
+				<form action="">
+					<h2>Contact</h2>
+					<div class="field">
+						<label for=".name">Name</label>
+						<input class="name" type="text">
+					</div>
+					<div class="field">
+						<label for=".email">Email</label>
+						<input class="email" type="text">
+					</div>
+					<div class="field">
+						<label for=".message">Message</label>
+						<input class="message" type="textarea">
+					</div>
+					<div class="form-submit">
+						<input type="submit" value="Submit">
+					</div>
+				</form>
+			</section>
+			<aside class="connect-menu">
+				<h3>Connect with Me</h3>
+				<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
+				<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
+				<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+			</aside>
+		</div>
+	</main>
+	<footer>
+		<p>@Copyright 2017 Kristin Glaze</p>
+	</footer>
 </body>
 </html>
