--- a/index.html
+++ b/index.html
@@ -14,19 +14,23 @@
 			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
-
-	<div class="main-content">
-		<section>
-			<h2>About Me</h2>
-			<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
-			<p>Bla bla bla</p>
-		</section>
-		<aside class="connect-menu">
-			<h3>Connect with Me</h3>
-			<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
-			<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
-			<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
-		</aside>
-	</div>
+	<main>
+		<div class="main-content">
+			<section>
+				<h2>About Me</h2>
+				<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
+				<p>Bla bla bla</p>
+			</section>
+			<aside class="connect-menu">
+				<h3>Connect with Me</h3>
+				<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
+				<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
+				<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+			</aside>
+		</div>
+	</main>
+	<footer>
+		<p>@Copyright 2017 Kristin Glaze</p>
+	</footer>
 </body>
 </html>
