Styling updates include making header and footer be fixed position, sprucing up appearance of contact form, making main section have overflow scroll vertically, and doing h1, h2, and h3 styling improvements. h2 and h3 includes lower border now.

--- a/contact.html
+++ b/contact.html
@@ -32,15 +32,17 @@
 						<input class="message" type="textarea">
 					</div>
 					<div class="form-submit">
-						<input type="submit" value="Submit">
+						<input type="submit" class="form-submit" value="Submit">
 					</div>
 				</form>
 			</section>
 			<aside class="connect-menu">
 				<h3>Connect with Me</h3>
-				<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
-				<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
-				<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+				<div class="logo-links-container">
+					<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
+					<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
+					<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+				</div>
 			</aside>
 		</div>
 	</main>
