--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 			</section>
 			<aside class="connect-menu">
 				<h3>Connect with Me</h3>
-				<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
-				<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
-				<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+				<div class="logo-links-container">
+					<a href="https://github.com/kiglaze" target="_blank"><img src="assets/images/GitHub_logo.png" alt="GitHub"></a>
+					<a href="https://www.linkedin.com/in/kiglaze/" target="_blank"><img src="assets/images/LinkedIn_logo.png" alt="LinkedIn"></a>
+					<a href="https://stackoverflow.com/users/5310113/kig" target="_blank"><img src="assets/images/StackOverflow_logo.png" alt="StackOverflow logo"></a>
+				</div>
 			</aside>
 		</div>
 	</main>
