Some spacing styling, and adding a div to the section below the h2 header.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 		<div class="main-content">
 			<section>
 				<h2>About Me</h2>
-				<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
-				<p>Bla bla bla</p>
+				<div class="main-section-content">
+					<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
+					<p>Bla bla bla</p>
+				</div>
 			</section>
 			<aside class="connect-menu">
 				<h3>Connect with Me</h3>
