--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,7 @@
 		<div class="main-content">
 			<section>
 				<h2>Portfolio</h2>
+				<div class="main-section-content"></div>
 			</section>
 			<aside class="connect-menu">
 				<h3>Connect with Me</h3>
