--- a/contact.html
+++ b/contact.html
@@ -16,25 +16,29 @@
 	</header>
 	<main>
 		<div class="main-content">
-			<section class="fieldset">
-				<form action="">
-					<h2>Contact</h2>
-					<div class="field">
-						<label for=".name">Name</label>
-						<input class="name" type="text">
-					</div>
-					<div class="field">
-						<label for=".email">Email</label>
-						<input class="email" type="text">
-					</div>
-					<div class="field">
-						<label for=".message">Message</label>
-						<input class="message" type="textarea">
-					</div>
-					<div class="form-submit">
-						<input type="submit" class="form-submit" value="Submit">
-					</div>
-				</form>
+			<section>
+				<h2>Contact</h2>
+				<div class="main-section-content">
+					<form action="">
+						<div class="fieldset">
+							<div class="field">
+								<label for=".name">Name</label>
+								<input class="name" type="text">
+							</div>
+							<div class="field">
+								<label for=".email">Email</label>
+								<input class="email" type="text">
+							</div>
+							<div class="field">
+								<label for=".message">Message</label>
+								<input class="message" type="textarea">
+							</div>
+							<div class="form-submit">
+								<input type="submit" class="form-submit" value="Submit">
+							</div>
+						</div>
+					</form>
+				</div>
 			</section>
 			<aside class="connect-menu">
 				<h3>Connect with Me</h3>
