Got portfolio image with banner divs to show up, and to have links associated with them. Styled with inline-block display.

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,46 @@
 		<div class="main-content">
 			<section>
 				<h2>Portfolio</h2>
-				<div class="main-section-content"></div>
+				<div class="main-section-content">
+					<div class="portfolio-selections-container">
+						<div class="portfolio-selection">
+							<a href="http://www.delish.com/cooking/recipe-ideas/g2933/satisfying-chicken-recipes/" target="_blank">
+								<img src="assets/images/placeholder-portfolio-img.jpg" alt="" class="portfolio-option-img">
+								<h4 class="portfolio-selection-banner">Chicken</h4>
+							</a>
+						</div>
+						<div class="portfolio-selection">
+							<a href="http://www.delish.com/cooking/recipe-ideas/g2933/satisfying-chicken-recipes/" target="_blank">
+								<img src="assets/images/placeholder-portfolio-img.jpg" alt="" class="portfolio-option-img">
+								<h4 class="portfolio-selection-banner">Chicken</h4>
+							</a>
+						</div>
+						<div class="portfolio-selection">
+							<a href="http://www.delish.com/cooking/recipe-ideas/g2933/satisfying-chicken-recipes/" target="_blank">
+								<img src="assets/images/placeholder-portfolio-img.jpg" alt="" class="portfolio-option-img">
+								<h4 class="portfolio-selection-banner">Chicken</h4>
+							</a>
+						</div>
+						<div class="portfolio-selection">
+							<a href="http://www.delish.com/cooking/recipe-ideas/g2933/satisfying-chicken-recipes/" target="_blank">
+								<img src="assets/images/placeholder-portfolio-img.jpg" alt="" class="portfolio-option-img">
+								<h4 class="portfolio-selection-banner">Chicken</h4>
+							</a>
+						</div>
+						<div class="portfolio-selection">
+							<a href="http://www.delish.com/cooking/recipe-ideas/g2933/satisfying-chicken-recipes/" target="_blank">
+								<img src="assets/images/placeholder-portfolio-img.jpg" alt="" class="portfolio-option-img">
+								<h4 class="portfolio-selection-banner">Chicken</h4>
+							</a>
+						</div>
+						<div class="portfolio-selection">
+							<a href="http://www.delish.com/cooking/recipe-ideas/g2933/satisfying-chicken-recipes/" target="_blank">
+								<img src="assets/images/placeholder-portfolio-img.jpg" alt="" class="portfolio-option-img">
+								<h4 class="portfolio-selection-banner">Chicken</h4>
+							</a>
+						</div>
+					</div>
+				</div>
 			</section>
 			<aside class="connect-menu">
 				<h3>Connect with Me</h3>
