Got background image to show up, with a background color for a backup. I also added a portrait picture for my website's profile picture.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<section>
 				<h2>About Me</h2>
 				<div class="main-section-content">
-					<img src="http://via.placeholder.com/350x150" alt="Portfolio Picture">
+					<img src="assets/images/profile-portrait.jpg" alt="Portfolio Picture">
 					<p>Bla bla bla</p>
 				</div>
 			</section>
