Made textarea look like a bigger text field, so like an actual textarea. For some reason it only looked like a regular text field before.

--- a/contact.html
+++ b/contact.html
@@ -23,15 +23,15 @@
 						<div class="fieldset">
 							<div class="field">
 								<label for=".name">Name</label>
-								<input class="name" type="text">
+								<input class="name field-area" type="text">
 							</div>
 							<div class="field">
 								<label for=".email">Email</label>
-								<input class="email" type="text">
+								<input class="email field-area" type="text">
 							</div>
 							<div class="field">
 								<label for=".message">Message</label>
-								<input class="message" type="textarea">
+								<textarea class="message field-area" rows="5" cols="40"></textarea>
 							</div>
 							<div class="form-submit">
 								<input type="submit" class="form-submit" value="Submit">
