Added more interesting text to the About Me description paragraphs, and made the paragraph tags start with indentations.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<h2>About Me</h2>
 				<div class="main-section-content">
 					<img src="assets/images/profile-portrait.jpg" alt="Portfolio Picture">
-					<p>Bla bla bla</p>
+					<p>During the day, I work as a website developer. This will surprise many people who I have not spoken with recently, because I did not program in high school. Also, I majored in mathematics and statistics. However, I was originally drawn to computer science because I took college-level computer science classes as part of a plan to become a more hireable mathematician outside of academia. Then I learned some website development during my free time because I have always thought the ability to make websites was cool. Web development has worked well as a career path for me because I love to be creative, and website development allows me to combine creativity with my problem-solving abilities.</p>
+					<p>Outside of work, I like to travel and try new activities such as rock climbing and dancing.</p>
 				</div>
 			</section>
 			<aside class="connect-menu">
